--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-﻿name = "BeijingPM25Prediction"
+name = "BeijingPM25Prediction"
 uuid = "dc9087eb-33eb-4b37-98f9-b266202578d1"
 authors = ["go39voy@mytum.de"]
 version = "0.1.0"
@@ -33,6 +33,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
+
 
 
 
