--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,9 @@ jobs:
 
       - uses: julia-actions/cache@v1
 
-      - name: Instantiate
-        run: julia --color=yes -e 'using Pkg; Pkg.instantiate(); Pkg.precompile()'
+      - name: Resolve & instantiate
+        run: julia --color=yes -e 'using Pkg; Pkg.resolve(); Pkg.instantiate(); Pkg.precompile()'
+
 
       - name: Run tests (headless)
         env:
