--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,40 +1,25 @@
 name: CI
 on:
   push:
-    branches: [ main, master ]
+    branches: [ "main", "master" ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ "main", "master" ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    env:
-      # (optional) if the pkg server ever misbehaves, uncomment to bypass:
-      # JULIA_PKG_SERVER: ""
     steps:
       - uses: actions/checkout@v4
 
       - uses: julia-actions/setup-julia@v2
         with:
-          version: '1.11'
+          version: "1.11"
 
       - uses: julia-actions/cache@v1
 
       - name: Ensure General registry
         run: |
-          julia -e '
-            using Pkg;
-            try
-              Pkg.Registry.add(Pkg.RegistrySpec(url="https://github.com/JuliaRegistries/General.git"))
-            catch
-              # ignore if already present
-            end
-            Pkg.Registry.update();
-            println("Registries after update:");
-            for r in values(Pkg.Registry.reachable_registries())
-              println(" - ", r.name, " @ ", r.path)
-            end
-          '
+          julia -e 'using Pkg; try Pkg.Registry.add(Pkg.RegistrySpec(url="https://github.com/JuliaRegistries/General.git")) catch end; Pkg.Registry.update(); println("Registries after update:"); for r in values(Pkg.Registry.reachable_registries()) println(" - ", r.name, " @ ", r.path) end'
 
       - name: Resolve & instantiate (project)
         run: |
