--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,52 +1,45 @@
 name: CI
+
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ "main", "master" ]
+    branches: [ main, master ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      # If the pkg server flakes, set this to "" to bypass it and fetch via git:
+      # JULIA_PKG_SERVER: ""
+      JULIA_NUM_THREADS: 2
     steps:
       - uses: actions/checkout@v4
 
       - uses: julia-actions/setup-julia@v2
         with:
-          version: "1.11"
+          version: '1.11'   # or '1' to track latest stable
 
       - uses: julia-actions/cache@v1
-      
-      - name: Ensure General registry
+
+      # (Optional) Print registries to help debug missing/old registries
+      - name: Show registries
+        run: julia --color=yes -e 'using Pkg; Pkg.Registry.status()'
+
+      # Ensure General is present & up-to-date, then resolve/instantiate/precompile
+      - name: Instantiate project
         run: |
-          julia --project=. -e '
-            using Pkg;
+          julia --project=. --color=yes -e '
+            using Pkg
             try
               Pkg.Registry.add(Pkg.RegistrySpec(url="https://github.com/JuliaRegistries/General.git"))
-            catch
-              # ignore if already present
+            catch e
+              @info "Registry add skipped (likely already present)" exception=e
             end
-            Pkg.Registry.update();
-            println("Registries after update:");
-            for r in values(Pkg.Registry.reachable_registries())
-              println(" - ", r.name, " @ ", r.path)
-            end
+            Pkg.Registry.update()
+            Pkg.resolve(); Pkg.instantiate(); Pkg.precompile()
           '
 
-      - name: Resolve & instantiate (project)
-        run: |
-          julia --project=. --color=yes -e 'using Pkg; Pkg.resolve(); Pkg.instantiate(); Pkg.precompile()'
-
-      - name: Pkg. status (debug)
-        run: |
-          julia --project=. -e 'using Pkg; println("Active project: ", Base.active_project()); Pkg.status()'
-
-      - name: Run tests (headless)
-        env:
-          GKSwstype: "100"
-        run: |
-          julia --project=. --color=yes -e 'using Pkg; Pkg.test()'
-
-      - name: Process coverage
-        if: runner.os == 'Linux'
-        uses: julia-actions/julia-processcoverage@v1
+      # Run your tests
+      - name: Run tests
+        run: julia --project=. --color=yes -e 'using Pkg; Pkg.test(; coverage=true)'
