--- a/Project.toml
+++ b/Project.toml
@@ -12,26 +12,18 @@ Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
-StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 julia = "1.11"
 CSV = "0.10"
 DataFrames = "1"
-DiffEqFlux = "1"
-DifferentialEquations = "7"
-Flux = "0.14, 0.15"
-OrdinaryDiffEq = "6"
+Flux = "0.16"
 Plots = "1"
-StatsBase = "0.34"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test"]
-
-
-
 
 
